--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -8,7 +8,7 @@ html {
 }
 
 body {
-  font-family: roboto, sans-serif;
+  font-family: Montserrat;
   background-color: var(--primary-bg-color);
 }
 
