add mobile markup

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,3 +2,6 @@
 @import './base/container';
 @import './layout/header';
 @import './layout/hero';
+@import './layout/about';
+@import './layout/calc';
+@import './layout/offer';
