--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -1,7 +1,7 @@
 .container {
   width: 100%;
   padding: 0px 20px;
-  outline: 1px solid red;
+  // outline: 1px solid red;
   margin: 0px auto;
 }
 // @media screen and (min-width: 480px) {
