--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -5,7 +5,7 @@
     justify-content: space-between;
     align-items: center;
     padding-top: 59px;
-    padding-bottom: 57.62px;
+    padding-bottom: 35.62px;
 
     &__logo {
       width: 97px;
@@ -33,12 +33,19 @@
   background: none;
   width: 39px;
   height: 20px;
-  margin-right: 29px;
+  margin-top: 3px;
+  margin-right: 33px;
   padding: 0;
+
+  & > svg {
+    position: relative;
+    left: 6px;
+  }
 }
 .header__container__buttonMenu {
   border: none;
   background: none;
   width: 36px;
   height: 26px;
+  padding: 0;
 }
