--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 574px;
+  height: 575px;
+  border-bottom: 15px solid #ffffff;
 }
 
 .container__hero__title {
@@ -11,17 +12,18 @@
   font-weight: 900;
   font-size: 35px;
   line-height: 43px;
+  margin-right: 2px;
   display: flex;
   align-items: center;
   text-align: center;
   color: #212121;
 
-  margin-bottom: 60px;
+  margin-bottom: 57px;
   margin-top: 0;
 }
 
 .container__hero__imageProduct {
-  width: 419px;
+  width: 456px;
 }
 .hero__grafic {
   position: relative;
@@ -29,8 +31,8 @@
 }
 
 .container__hero__linkToBy {
-  bottom: 190px;
-  right: 50px;
+  bottom: 212px;
+  right: 69px;
   position: absolute;
   width: 80px;
   height: 80px;
