--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -4,21 +4,8 @@
   // outline: 1px solid red;
   margin: 0px auto;
 }
-// @media screen and (min-width: 480px) {
-//   .container {
-//     width: 480px;
-//     margin: 0 auto;
-//   }
-// }
-
-// @media screen and (min-width: 768px) {
-//   .container {
-//     width: 768px;
-//   }
-// }
-
-// @media screen and (min-width: 1200px) {
-//   .container {
-//     width: 1200px;
-//   }
-// }
+@media screen and (min-width: 1440px) {
+  .container {
+    padding: 0px 110px;
+  }
+}
