--- a/src/sass/layout/_calc.scss
+++ b/src/sass/layout/_calc.scss
@@ -48,7 +48,7 @@
     border: 1px solid #212121;
     box-sizing: border-box;
     border-radius: 15px;
-
+    text-align: center;
     &::placeholder {
       font-family: 'Montserrat';
       font-style: normal;
@@ -88,6 +88,7 @@
     border: 1px solid #212121;
     box-sizing: border-box;
     border-radius: 15px;
+    text-align: center;
 
     &::placeholder {
       font-family: 'Montserrat';
@@ -142,5 +143,74 @@
     line-height: 20px;
     color: #ffffff;
     margin: 0;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .calc__container {
+    padding-left: 215px;
+    padding-right: 214px;
+  }
+  .calc__container__manual {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: -1px;
+    margin-bottom: 30px;
+  }
+  .calc__container__title {
+    font-size: 40px;
+    line-height: 49px;
+    padding-top: 50px;
+    margin-right: 0px;
+    margin-bottom: 39px;
+  }
+  .calc__container__description {
+    font-size: 20px;
+    line-height: 32px;
+    margin-right: 0px;
+  }
+  .calc__container__quantityGlass,
+  .calc__container__sum {
+    margin-top: 83px;
+    width: 491px;
+    height: 260px;
+
+    &__description {
+      width: 360px;
+      font-size: 20px;
+      line-height: 30px;
+      margin-bottom: 40px;
+    }
+  }
+  .calc__container__total {
+    width: 100%;
+    height: 127px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 0 auto;
+    padding-left: 224px;
+    padding-right: 224px;
+    padding-top: 6px;
+
+    &__description {
+      display: inline-block;
+      font-size: 20px;
+      line-height: 30px;
+      margin: 0;
+    }
+    &__money {
+      display: inline-block;
+      font-size: 24px;
+      line-height: 32px;
+      margin: 0;
+    }
+    &__period {
+      display: inline-block;
+      font-size: 20px;
+      line-height: 30px;
+      margin: 0;
+    }
   }
 }
