--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -49,3 +49,72 @@
   height: 26px;
   padding: 0;
 }
+
+.header__container__buttonOffer {
+  display: none;
+}
+
+@media screen and (min-width: 1440px) {
+  .header__container {
+    position: fixed;
+    top: 0;
+    padding-top: 41px;
+    z-index: 10;
+    background-color: white;
+    box-shadow: 0px 4px 24px -5px rgba(0, 0, 0, 0.15);
+  }
+  .header__container__logo {
+    width: 119.54px;
+    height: 51px;
+    & > img {
+      width: 119.54px;
+      height: 51px;
+    }
+  }
+  .header__container__buttonMenu {
+    display: none;
+  }
+  .header__container__buttonLang {
+    margin-right: 29px;
+  }
+  .header__container__buttonOffer {
+    display: block;
+    width: 152px;
+    height: 57px;
+    background: #ffb001;
+    border: 2px solid #ffb001;
+    box-shadow: 0px 20px 59px -10px rgba(0, 0, 0, 0.15);
+    border-radius: 28.5px;
+    padding: 18px 57px 35px 56px;
+
+    & span {
+      font-family: 'Montserrat';
+      font-style: normal;
+      font-weight: 900;
+      font-size: 16px;
+      line-height: 20px;
+      text-align: center;
+      color: #212121;
+    }
+  }
+  .header__container__nav {
+    display: flex;
+    justify-content: space-between;
+    margin-left: 85px;
+    width: 472px;
+    margin-top: 3px;
+    & a {
+      font-family: 'Montserrat';
+      font-style: normal;
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 20px;
+      color: #212121;
+      // &:not(:last-child) {
+      //   margin-right: 47px;
+    }
+    &__link--3 {
+      margin-right: -6px;
+    }
+  }
+}
