--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -48,6 +48,83 @@
   width: 36px;
   height: 26px;
   padding: 0;
+  &.menu-is-open {
+    display: none;
+  }
+}
+.header__container__buttonCloseMenu {
+  display: none;
+  border: none;
+  background: none;
+  width: 36px;
+  height: 26px;
+  padding: 0;
+
+  &.menu-is-open {
+    display: block;
+  }
+}
+
+.menuContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  top: 135px;
+  left: 0;
+  width: 100vw;
+  // height: 100vh;
+  padding: 36px 100px 0 125px;
+  background-color: white;
+
+  transform: translateX(100%);
+  z-index: 20;
+
+  & a {
+    display: block;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 18px;
+    color: #212121;
+    margin-bottom: 77px;
+    text-align: center;
+  }
+}
+
+.menuContainer.is-open {
+  transform: translateX(0);
+  transition: transform 450ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
+}
+.header.menu-is-open {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: white;
+  width: 100vw;
+}
+
+.header__container__buttonOffer--mobile {
+  display: block;
+  width: 152px;
+  height: 57px;
+  background: #ffb001;
+  border: 2px solid #ffb001;
+  box-shadow: 0px 20px 59px -10px rgba(0, 0, 0, 0.15);
+  border-radius: 28.5px;
+  padding: 18px 57px 35px 56px;
+
+  & span {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 900;
+    font-size: 16px;
+    line-height: 20px;
+    text-align: center;
+    color: #212121;
+  }
 }
 
 .header__container__buttonOffer {
